--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ serde_json = "1.0.61"
 serde_derive = "1.0.119"
 serde_with = "1.6"
 tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros"] }
+thiserror = "1.0"
 csv = "1.1"
