--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ serde_with = "1.6"
 tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros"] }
 thiserror = "1.0"
 csv = "1.1"
+
+[dev-dependencies]
+base64 = "0.13"
