--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,12 @@ bincode = "1.3.1"
 derive_builder = "0.9.0"
 chrono = "0.4.19"
 flate2 = "1.0.19"
-hyper = { version = "0.14", features = ["client", "http1", "http2"] }
-hyper-rustls = "0.22"
 json_value_merge = "0.1"
 serde = "1.0.119"
 serde_json = "1.0.61"
 serde_derive = "1.0.119"
 serde_with = "1.6"
+reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros"] }
 thiserror = "1.0"
 csv = "1.1"
