--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 derive_builder = "0.9.0"
 chrono = "0.4.19"
 json_value_merge = "0.1"
+log = "0.4"
 serde = "1.0.119"
 serde_json = "1.0.61"
 serde_derive = "1.0.119"
@@ -18,3 +19,4 @@ thiserror = "1.0"
 
 [dev-dependencies]
 base64 = "0.13"
+env_logger = "0.8"
