--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 [dev-dependencies]
 base64 = "0.13"
 env_logger = "0.9"
+pretty_assertions = "1.3"
